methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:4: error: not found: value rep
  rep = false
  ^SlugTracking:8: error: not found: value rep
      rep = true
      ^SlugTracking:11: error: not found: value rep
  return rep
         ^