methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
  rep = false
  if (!estFaceMur()) {
    avance()
    if (getCouleurSol()==Color.green) {
      rep = true
    }
  }
  return rep
}